tdf#143412 CRASH: converting images

Revert "use unique_ptr in SdrEditView::ImpConvertOneObj"
This reverts commit 2ec1dab4693cd45b475f02452114dd96ec0bda1b.

I was wrong, we are no returning ownership here.

Change-Id: Ib3b3b32248d4b56f0a48c658db5d6431b26fc352
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/119335
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 58c6fad213024ef8f162984a66af565ac9ad4b97)